<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".TaskActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/taskActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_task"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/checkPlate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_activity_task"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/numPlate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_plaque"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_verif" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sendAction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_activity_task2"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/actionFromGarde"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_action"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_send" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/changePost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_activity_task3"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonChangePost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_return_post" />
    </LinearLayout>
</LinearLayout>